--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <title>Redirect</title>
+  <title>Dienstplan Diagnose</title>
+  <!-- Redirection automatique vers diagnostic.html -->
   <meta http-equiv="refresh" content="0; URL=Diagnostic.html">
 </head>
 <body>
-  <p>Weiterleitung... Falls nichts passiert, <a href="diagnostic.html">hier klicken</a>.</p>
+  <h2>Weiterleitung...</h2>
+  <p>Falls nichts passiert, <a href="Diagnostic.html">hier klicken</a>.</p>
 </body>
 </html>
