--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <title>Dienstplan Diagnose</title>
   <!-- Redirection automatique vers diagnostic.html -->
-  <meta http-equiv="refresh" content="0; URL=Diagnostic.html">
+  <meta http-equiv="refresh" content="0; URL=diagnostic.html">
 </head>
 <body>
   <h2>Weiterleitung...</h2>
-  <p>Falls nichts passiert, <a href="Diagnostic.html">hier klicken</a>.</p>
+  <p>Falls nichts passiert, <a href="diagnostic.html">hier klicken</a>.</p>
 </body>
 </html>
